# torchtitan

./: .gitignore  dev_train.sh  makefile  pyproject.toml  torch-2.8.0.patch
scripts/checkpoint_conversion/: convert_aardvark_config.py
torchtitan/: train.py
torchtitan/experiments/: __init__.py
torchtitan/experiments/weather/: __init__.py  loss.py  validate.py
torchtitan/experiments/weather/dataset/: aardvark_dataset.py  data_sources.py  tokenizer.py  xarray_utils.py
torchtitan/experiments/weather/models/aardvark/infra/: parallelize.py
torchtitan/experiments/weather/models/aardvark/model/: README.md  aardvark_utils.py  architectures.py  args.py  conv_np.py  downscaling.py  layers.py  model.py  tests.py  unet_wrap_padding.py  vit.py
torchtitan/experiments/weather/models/aardvark/model/working_dir/: architectures.py  e2e_model.py  misc_downscaling_functionality.py  models.py  set_convs.py  unet_wrap_padding.py  vit.py
torchtitan/experiments/weather/models/simple_llama3/infra/: parallelize.py  pipeline.py
torchtitan/experiments/weather/models/simple_llama3/model/: args.py  model.py
torchtitan/experiments/weather/train_configs/: aardvark-debug.toml  aardvark-sept-5.toml  debug.toml
