# ---- All project specifications ---- #
[project]
name = "torchtitan"
description = "A PyTorch native platform for training generative AI models"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    { name = "PyTorch Team", email = "packages@pytorch.org" },
]
keywords = ["pytorch", "training", "llm"]
dependencies = [
    # Stateful Dataloader
    "torchdata>=0.8.0",
    # Hugging Face integrations
    "datasets>=2.21.0",
    # Tokenization
    "tokenizers",
    # Miscellaneous
    "tomli>=1.1.0",
    "fsspec",
    "tyro",
    "tensorboard",
    "xarray>=2025.6.1",
    "tensordict>=0.9.1",
    "netcdf4>=1.7.2",
    "wandb>=0.21.3",
    "timm>=1.0.19",
    "numpy==2.0.0",
    "ipdb>=0.13.13",
]
dynamic = ["version"]

[project.urls]
GitHub = "https://github.com/pytorch/torchtitan"
Documentation = "https://github.com/pytorch/torchtitan/tree/main/docs"
Issues = "https://github.com/pytorch/torchtitan/issues"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "pytest-cov",
    "wandb"
]

[tool.setuptools.dynamic]
version = {file = "assets/version.txt"}


# ---- Explicit project build information ---- #
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [""]
include = ["torchtitan*"]

[tool.pytest.ini_options]
addopts = ["--showlocals"]  # show local variables in tracebacks
